--- a/manifest.json
+++ b/manifest.json
@@ -2,5 +2,5 @@
   "name": "Terrain",
   "description": "Describe your WebXR application",
   "xr_type": "webxr-site@0.0.1",
-  "start_url": "terrain.html"
+  "start_url": "index.html"
 }
